Changes in version 1.0-23:
* Fixed a bug in yai() when categorical predictors are used, reported by Nan Pond.
* Fixed a bug in yai() that was revealed when bootstrapping. 
Thanks to Jan Rombouts.
* Enhanced AsciiGridImpute() to trim the number of files being read. 
Thanks to Nicolas Py.

Changes in version 1.0-22:
* Greatly improved the speed of impute.R, thanks to Bastien Ferland-Raymond who 
pointed out the problem. 
* Fixed an error in AsciiGridImpute() pointed out by Nicolas PY.
* Fixed an error in yai() concerning the specification of mtry when 
method="randomForest", thanks to Guy Strickland.

Changes in version 1.0-21:

* Added code to grmsd() so that it "runs" wiht single variables (ie, just one y from lm).
* Added an argument to yai() that allows one to specify a different subset of X-variables
for each Y-variable. 
* Fixed a bug in reporting the results when method="randomForest" and the rfmethod="regression".
* Fixed two long-standing bugs in AsciiGridImpute and AsciiGridPredict. One was
that the output grid headers would not be output correctly when the nodata 
argument was used and the other delt with a problem when predict returned a matrix.
* Modified the examples in AsciiGridImpute so that they use a tempdir() for output files.
* Added the use of grmsd() in the examples in yai().
* Fixed return value in grmsd() when argument rtnVectors is TRUE

Changes in version 1.0-20:

* Added varSelection() to aid in variable selection. A plot function is 
include to aid in understanding the results; bestVars() returns what seem to be
a set of "best" variables for objects created by varSelection().
* Added grmsd() to compute a generalized root mean square error which is a Mahalanobis
distance between observed and imputed. Provides a single score useful for ranking
imputation models and methods (or returns vectors of distances).
* Added rmsd(); it is an alias to rmsd.yai().
* Added method="median" to function impute.