@@ -7,7 +7,7 @@ Copyright: ANN library is copyright University of Maryland and Sunil Arya and
  David Mount. See file COPYRIGHTS for details.
 Maintainer: Nicholas L. Crookston <ncrookston.fs@gmail.com>
 Depends: R (>= 2.11.0)
-Suggests: vegan, ccaPP, randomForest, gam, fastICA
+Suggests: vegan, ccaPP, randomForest, gam, fastICA, parallel
 Description: Performs nearest neighbor-based imputation using one or more alternative 
  approaches to processing multivariate data. These include methods based on canonical 
  correlation analysis, canonical correspondence analysis, and a multivariate adaptation 
